# bollywood-data-science

./: .bumpversion.cfg  .coveragerc  .dmypy.json  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  TODO.md  deploy.sh  mkdocs.yml  pyproject.toml  shell.nix
.github/workflows/: issue-manager.yml  test.yml
bollywood_data_science/: __init__.py  _lib.py  disjoint_set.py  imdb_graph.py  main.py  module.py  sparql_graph.py  time_code.py
docs/: conf.py  contributing.rst  index.md  installation.rst
notes/: sparql.md
res/: config.yaml
scripts/: build-docs.sh  format.sh  lint.sh  publish.sh  test.sh
stubs/IPython/: __init__.pyi
stubs/SPARQLWrapper/: Wrapper.pyi  __init__.pyi
stubs/aiofiles/: _compat.pyi  base.pyi  os.pyi
stubs/aiofiles/threadpool/: __init__.pyi  binary.pyi  text.pyi  utils.pyi
stubs/imdb/: __init__.pyi  imdb.pyi
stubs/psutil/: __init__.pyi
stubs/rdflib/: XSD.pyi  __init__.pyi  graph.pyi  namespace.pyi  plugin.pyi  query.pyi  term.pyi
stubs/tqdm/: __init__.pyi
tests/: test_module.py
