[tool.poetry]
name = "bollywood_data_science"
version = "0.0.0"
description = "Quantitative analysis of the Bollywood industry"
authors = ["Samuel Grayson <sam@samgrayson.me>"]
license = "NCSA"
readme = "README.md"
repository = "https://github.com/charmoniumQ/bollywood-data-science"
homepage = "https://github.com/charmoniumQ/bollywood-data-science"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.780"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
pre-commit = "^2.4.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
mkdocs = "^1.1"
mkdocs-material = "^5.1.5"
markdown-include = "^0.5.1"
pylint = "^2.5.2"
bandit = "^1.6.2"
pylint-exit = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
